# cards

./: .gitignore  DOCUMENTATION.md
aurora-report/: README.md  SIMULATION-OPTIONS.md  aurora-cards-with-tcgplayer-ids.json  aurora-runeblade-lightning-cards.md  card-identifier-lookup.json  fetch-prices.mjs  scrape-fabrary.mjs
fab-rs/: Cargo.toml  README.md
fab-rs/crates/fab-cards/: Cargo.toml
fab-rs/crates/fab-cards/src/: aurora_cards.tsv  card.rs  lib.rs  types.rs
fab-rs/crates/fab-engine/: Cargo.toml
fab-rs/crates/fab-engine/src/: agents.rs  deck.rs  game.rs  lib.rs  linear.rs  rng.rs
fab-rs/crates/fab-optimize/: Cargo.toml
fab-rs/crates/fab-optimize/src/: main.rs
fab-rs/crates/fab-sim/: Cargo.toml
fab-rs/crates/fab-sim/src/: main.rs
fab-rs/crates/fab-train/: Cargo.toml
fab-rs/crates/fab-train/src/: main.rs
talishar-sim/: README.md  aurora_deck.example.json  aurora_env.py  build_aurora_deck.py  run_simulation.py
