[package]
name = "fab-optimize"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deck-ratio optimizer for Aurora via simulation + hill climbing (Dr. Ruckus style)."

[[bin]]
name = "fab-optimize"
path = "src/main.rs"

[dependencies]
fab-cards = { path = "../fab-cards" }
fab-engine = { path = "../fab-engine" }
